--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.0.12
 click==8.0.4
 dill==0.3.4
 Flask==2.0.3
+gunicorn==20.1.0
 idna==3.3
 isort==5.10.1
 itsdangerous==2.1.2
@@ -17,6 +18,7 @@ parso==0.8.3
 platformdirs==2.5.1
 psycopg2==2.9.3
 pylint==2.13.2
+-e git+ssh://git@github.com/ryanr549/pyQuote.git@4364f81fe70e7898ed097683747d11fac0471f49#egg=pyquote
 requests==2.27.1
 soupsieve==2.3.1
 tomli==2.0.1
